--- a/about.html
+++ b/about.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ================= SEO FOR ABOUT PAGE ================= -->
-    <title>About Pulse Dance Company | Our Story, Mission, Team & Why Choose Us</title>
+    <title>About Unity Dance Company | Dance Styles, Zumba Programs & Our Story</title>
 
-    <meta name="description" content="Learn about Pulse Dance Company – our journey, mission, vision, values, and the reasons why dancers choose us. Meet our founders, instructors, and award-winning choreographers shaping the next generation of dancers." />
-    <meta name="keywords" content="about Pulse Dance Company, why choose Pulse Dance Company, best dance academy NYC, dance instructors NYC, choreography team, dance awards, mission vision dance studio" />
-    <meta name="author" content="Pulse Dance Company" />
+    <meta name="description" content="Unity Dance Company offers a wide range of dance styles including Western, Bollywood, Folk, Hip Hop, Freestyle, and Contemporary dance. We also provide Zumba and fitness programs for both boys and girls. Learn more about our studio, our passion for dance, and our commitment to fitness." />
+
+    <meta name="keywords" content="Unity Dance Company, dance classes near me, western dance, bollywood dance, folk dance, hip hop dance, freestyle dance, contemporary dance, zumba classes, aerobics, fitness studio" />
+
+    <meta name="author" content="Unity Dance Company" />
 
     <!-- SOCIAL PREVIEW -->
-    <meta property="og:title" content="About Pulse Dance Company – Our Story, Team & Why Choose Us" />
-    <meta property="og:description" content="Discover our journey, meet our instructors, and learn why Pulse Dance Company is a premier dance academy in NYC." />
+    <meta property="og:title" content="About Unity Dance Company – Dance & Zumba Studio" />
+    <meta property="og:description" content="Explore dance styles and Zumba fitness programs for boys and girls at Unity Dance Company. Discover our passion for dance and healthy living." />
     <meta property="og:type" content="website" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -37,13 +39,13 @@
 
     <div class="nav-left">
       <button class="menu-btn" onclick="toggleMainMenu()">☰</button>
-      <a href="index.html" class="logo-text">Pulse Dance Co.</a>
+      <a href="index.html" class="logo-text">Unity Dance Company.</a>
     </div>
 
     <div class="nav-right" id="desktop-menu">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-       <a href="services.html">Services</a>
+      <a href="services.html">Services</a>
       <a href="policies.html">Policies</a>
       <a href="gallery.html">Gallery</a>
       <a href="contact.html" class="nav-btn">Enroll Now</a>
@@ -53,7 +55,7 @@
   <div id="mobile-menu" class="mobile-menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-     <a href="services.html">Services</a>
+    <a href="services.html">Services</a>
     <a href="policies.html">Policies</a>
     <a href="gallery.html">Gallery</a>
     <a href="contact.html" class="mobile-btn">Enroll Now</a>
@@ -67,24 +69,26 @@
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-20">
   <div class="glass rounded-3xl p-8 md:p-12 hero-gradient reveal">
     <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">About Us</p>
-    <h1 class="text-4xl font-bold mt-4">Pulse Dance Company</h1>
+    <h1 class="text-4xl font-bold mt-4">Unity Dance Company</h1>
 
     <p class="text-slate-300 mt-4 max-w-3xl">
-      Founded in 2010, Pulse Dance Company began as a small group of passionate artists with a dream to create a space where dancers could grow, express, and perform without limits. Over the years, we have evolved into one of New York’s most respected dance academies, known for blending technical excellence with creative storytelling.
+      Unity Dance Company is a creative dance and fitness studio where students explore
+      multiple dance styles and Zumba programs in a positive and energetic environment.
+      We believe in making dance and fitness enjoyable for everyone.
     </p>
 
     <div class="grid md:grid-cols-3 gap-6 mt-8">
       <div class="glass rounded-2xl p-6 card-hover">
-        <p class="text-3xl font-semibold">14+</p>
-        <p class="text-slate-400 text-sm mt-1">Years of excellence in dance education.</p>
+        <p class="text-3xl font-semibold">10+</p>
+        <p class="text-slate-400 text-sm mt-1">Years of inspiring dancers.</p>
       </div>
       <div class="glass rounded-2xl p-6 card-hover">
-        <p class="text-3xl font-semibold">1500+</p>
-        <p class="text-slate-400 text-sm mt-1">Students trained across the globe.</p>
+        <p class="text-3xl font-semibold">1000+</p>
+        <p class="text-slate-400 text-sm mt-1">Students trained with passion.</p>
       </div>
       <div class="glass rounded-2xl p-6 card-hover">
-        <p class="text-3xl font-semibold">40+</p>
-        <p class="text-slate-400 text-sm mt-1">Professional instructors & choreographers.</p>
+        <p class="text-3xl font-semibold">20+</p>
+        <p class="text-slate-400 text-sm mt-1">Dance & fitness styles offered.</p>
       </div>
     </div>
   </div>
@@ -98,40 +102,38 @@
     <h2 class="text-3xl font-semibold">Mission, Vision & Values</h2>
 
     <p class="text-slate-300">
-      <strong>Mission:</strong> To inspire dancers of all backgrounds by providing world-class training, creative opportunities, and a supportive artistic community.
+      <strong>Mission:</strong> To provide quality dance and fitness training that builds confidence, discipline, and creativity in every student.
     </p>
 
     <p class="text-slate-300">
-      <strong>Vision:</strong> To become a global hub for dance education, performance, and innovation.
+      <strong>Vision:</strong> To become a trusted dance and fitness studio known for excellence, inclusiveness, and positive energy.
     </p>
 
     <ul class="space-y-3 text-sm text-slate-300">
-      <li class="flex gap-3 items-start"><span class="h-2 w-2 rounded-full bg-accent mt-2"></span> Excellence in training and performance</li>
-      <li class="flex gap-3 items-start"><span class="h-2 w-2 rounded-full bg-accent mt-2"></span> Creativity, diversity, and inclusion</li>
-      <li class="flex gap-3 items-start"><span class="h-2 w-2 rounded-full bg-accent mt-2"></span> Integrity, discipline, and teamwork</li>
+      <li class="flex gap-3 items-start"><span class="h-2 w-2 rounded-full bg-accent mt-2"></span> Professional and friendly teaching approach</li>
+      <li class="flex gap-3 items-start"><span class="h-2 w-2 rounded-full bg-accent mt-2"></span> Variety of dance styles and fitness programs</li>
+      <li class="flex gap-3 items-start"><span class="h-2 w-2 rounded-full bg-accent mt-2"></span> Supportive environment for boys and girls</li>
     </ul>
   </div>
-
-  <!-- <div class="gallery-card h-full">
-    <img src="https://images.unsplash.com/photo-1488218576539-6c658c709f0e?auto=format&fit=crop&w=1200&q=80" alt="Dance instructors training students" class="h-full" />
-  </div> -->
 </section>
 
 <!-- ================= WHY CHOOSE US ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-24 reveal">
   <div class="glass rounded-3xl p-8 md:p-10">
     <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">Why Choose Us</p>
-    <h2 class="text-3xl font-semibold mt-3">What Makes Pulse Dance Company Different</h2>
+    <h2 class="text-3xl font-semibold mt-3">What Makes Unity Dance Company Special</h2>
 
     <p class="text-slate-400 mt-3 max-w-3xl">
-      At Pulse Dance Company, we go beyond teaching steps — we build confident performers and passionate artists. Our students choose us for our commitment to quality, creativity, and real-world dance exposure.
+      At Unity Dance Company, we focus on both dance and fitness. Our students enjoy
+      learning multiple dance styles along with Zumba and workout programs that
+      improve health, confidence, and performance.
     </p>
 
     <ul class="mt-6 space-y-3 text-sm text-slate-300">
-      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Industry-experienced instructors and choreographers</li>
-      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Professional-level studios with performance-ready training</li>
-      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Career guidance, auditions prep & portfolio building</li>
-      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Inclusive, supportive, and motivating dance community</li>
+      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Multiple dance styles under one roof</li>
+      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Zumba & fitness programs for boys and girls</li>
+      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Friendly trainers and flexible batches</li>
+      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Positive, motivating learning environment</li>
     </ul>
   </div>
 </section>
@@ -140,16 +142,18 @@
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-24 reveal">
   <div class="glass rounded-3xl p-8 md:p-10">
     <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">Our Team</p>
-    <h2 class="text-3xl font-semibold mt-3">Founders, Instructors & Choreographers</h2>
+    <h2 class="text-3xl font-semibold mt-3">Instructors & Trainers</h2>
 
     <p class="text-slate-400 mt-3 max-w-3xl">
-      Pulse Dance Company was founded by industry veterans who have performed and choreographed for international stages, television, and award shows. Today, our team includes master instructors, creative directors, and mentors dedicated to shaping confident performers.
+      Our instructors are passionate dance and fitness professionals who guide
+      students in Western, Bollywood, Folk, Hip Hop, Freestyle, Contemporary dance,
+      and Zumba programs.
     </p>
 
     <ul class="mt-6 space-y-3 text-sm text-slate-300">
-      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Certified dance professionals with global experience</li>
-      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Choreographers for TV, film, and live tours</li>
-      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Mentors guiding dancers toward professional careers</li>
+      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Experienced dance trainers</li>
+      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Certified Zumba & fitness instructors</li>
+      <li class="flex items-center gap-3"><span class="h-2 w-2 rounded-full bg-accent"></span> Supportive mentors for every student</li>
     </ul>
   </div>
 </section>
@@ -158,20 +162,20 @@
 <section class="max-w-6xl mx-auto px-4 pb-20 md:pb-24 reveal">
   <div class="glass rounded-3xl p-8 md:p-10">
     <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">Recognition</p>
-    <h2 class="text-3xl font-semibold mt-3">Awards & Achievements</h2>
+    <h2 class="text-3xl font-semibold mt-3">Our Achievements</h2>
 
     <div class="grid md:grid-cols-3 gap-6 mt-8">
       <div class="glass rounded-2xl p-6 card-hover">
-        <p class="font-semibold">Best Dance Academy</p>
-        <p class="text-slate-400 text-sm mt-2">Awarded by NYC Arts Council – 2022</p>
+        <p class="font-semibold">Community Appreciation</p>
+        <p class="text-slate-400 text-sm mt-2">Recognized for promoting dance and fitness in the community.</p>
       </div>
       <div class="glass rounded-2xl p-6 card-hover">
-        <p class="font-semibold">Outstanding Choreography</p>
-        <p class="text-slate-400 text-sm mt-2">National Dance Awards – 2021</p>
+        <p class="font-semibold">Student Success</p>
+        <p class="text-slate-400 text-sm mt-2">Hundreds of students performing confidently on stage.</p>
       </div>
       <div class="glass rounded-2xl p-6 card-hover">
-        <p class="font-semibold">Community Impact</p>
-        <p class="text-slate-400 text-sm mt-2">Recognized for youth outreach programs – 2020</p>
+        <p class="font-semibold">Fitness Excellence</p>
+        <p class="text-slate-400 text-sm mt-2">Appreciated for quality Zumba and workout programs.</p>
       </div>
     </div>
   </div>
@@ -179,16 +183,16 @@
 
 </main>
 
-<!-- ================= FOOTER (UNCHANGED) ================= -->
+<!-- ================= FOOTER ================= -->
 <footer class="dance-footer">
   <div class="footer-container">
 
     <div class="footer-left">
-      <div class="footer-logo">PD</div>
-      <h3>Pulse Dance Co.</h3>
+      <div class="footer-logo">UD</div>
+      <h3>Unity Dance Company.</h3>
       <p>
-        NYC-based academy elevating dancers through training,
-        performance, and community.
+        Inspiring dancers through training,
+        fitness, and creative expression.
       </p>
     </div>
 
@@ -198,7 +202,7 @@
         <h4>Pages</h4>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-         <a href="services.html">Services</a>
+        <a href="services.html">Services</a>
         <a href="policies.html">Policies</a>
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
@@ -208,14 +212,14 @@
         <h4>Contact</h4>
         <p>305 W 38th St, New York</p>
         <p>(212) 555-0192</p>
-        <a href="mailto:hello@pulsedance.co">hello@pulsedance.co</a>
+        <a href="mailto:hello@unitydance.co">hello@unitydance.co</a>
       </div>
 
     </div>
   </div>
 
   <div class="footer-bottom">
-    © <span id="year"></span> Pulse Dance Company. All rights reserved.
+    © <span id="year"></span> Unity Dance Company. All rights reserved.
   </div>
 </footer>
 
