--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ================= SEO FOR CONTACT PAGE ================= -->
-    <title>Contact Pulse Dance Company | Get in Touch</title>
+    <title>Contact Unity Dance Company | Dance & Zumba Studio</title>
 
-    <meta name="description" content="Contact Pulse Dance Company for dance classes, choreography, and collaborations. Reach us via phone, email, or our contact form. Visit our studio in New York or find us on social media." />
-    <meta name="keywords" content="contact Pulse Dance Company, dance studio contact, dance academy phone number, dance classes NYC contact, choreography inquiries" />
-    <meta name="author" content="Pulse Dance Company" />
+    <meta name="description" content="Contact Unity Dance Company for dance classes and Zumba programs. We offer Western, Bollywood, Folk, Hip Hop, Freestyle and Contemporary dance styles along with Zumba fitness, aerobics and workout sessions for boys and girls." />
+
+    <meta name="keywords" content="contact Unity Dance Company, dance studio contact, zumba classes contact, dance academy phone number, hip hop dance studio, bollywood dance classes, fitness studio contact" />
+
+    <meta name="author" content="Unity Dance Company" />
 
     <!-- SOCIAL PREVIEW -->
-    <meta property="og:title" content="Contact Pulse Dance Company" />
-    <meta property="og:description" content="Have questions about classes or collaborations? Reach Pulse Dance Company by phone, email, or visit our studio in NYC." />
+    <meta property="og:title" content="Contact Unity Dance Company" />
+    <meta property="og:description" content="Get in touch with Unity Dance Company for dance styles and Zumba fitness programs for boys and girls." />
     <meta property="og:type" content="website" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -37,7 +39,7 @@
 
     <div class="nav-left">
       <button class="menu-btn"  onclick="toggleMainMenu()">☰</button>
-      <a href="index.html" class="logo-text">Pulse Dance Co.</a>
+      <a href="index.html" class="logo-text">Unity Dance Company</a>
     </div>
 
     <div class="nav-right" id="desktop-menu">
@@ -69,7 +71,7 @@
     <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">Contact Us</p>
     <h1 class="text-4xl font-bold mt-4">We’d love to hear from you</h1>
     <p class="text-slate-300 mt-4 max-w-3xl">
-      Have a question about our dance classes, choreography services, or collaborations?  
+      Have a question about our dance styles or Zumba fitness programs?  
       Reach out using the form below or connect with us directly — our team is happy to help!
     </p>
   </div>
@@ -86,87 +88,45 @@
     Fill in the form and we’ll get back to you shortly.
   </p>
 
-  <!-- FORM WRAPPER -->
   <div style="max-width:420px">
-
     <form>
 
-      <!-- NAME -->
       <div style="margin-bottom:14px">
         <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
           Full Name
         </label>
         <input type="text" placeholder="Enter your name"
-          style="
-            width:100%;
-            padding:10px 12px;
-            border-radius:6px;
-            border:1px solid #374151;
-            background:#020617;
-            color:#e5e7eb;
-            outline:none;
-          ">
+          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#020617;color:#e5e7eb;outline:none;">
       </div>
 
-      <!-- EMAIL -->
       <div style="margin-bottom:14px">
         <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
           Email Address
         </label>
         <input type="email" placeholder="Enter your email"
-          style="
-            width:100%;
-            padding:10px 12px;
-            border-radius:6px;
-            border:1px solid #374151;
-            background:#020617;
-            color:#e5e7eb;
-            outline:none;
-          ">
+          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#020617;color:#e5e7eb;outline:none;">
       </div>
 
-      <!-- MESSAGE -->
       <div style="margin-bottom:18px">
         <label style="display:block; font-size:14px; color:#9ca3af; margin-bottom:4px;">
           Message
         </label>
         <textarea rows="4" placeholder="Type your message here..."
-          style="
-            width:100%;
-            padding:10px 12px;
-            border-radius:6px;
-            border:1px solid #374151;
-            background:#020617;
-            color:#e5e7eb;
-            outline:none;
-            resize:none;
-          "></textarea>
+          style="width:100%;padding:10px 12px;border-radius:6px;border:1px solid #374151;background:#020617;color:#e5e7eb;outline:none;resize:none;"></textarea>
       </div>
 
-      <!-- BUTTON -->
       <button type="submit"
-        style="
-          padding:10px 24px;
-          border-radius:9999px;
-          background:linear-gradient(135deg,#14f195,#6d28d9);
-          color:#000;
-          font-weight:600;
-          border:none;
-          cursor:pointer;
-        ">
+        style="padding:10px 24px;border-radius:9999px;background:linear-gradient(135deg,#14f195,#6d28d9);color:#000;font-weight:600;border:none;cursor:pointer;">
         Send Message
       </button>
 
     </form>
-
   </div>
 </div>
-
 
   <!-- CONTACT DETAILS -->
   <div class="lg:col-span-2 flex flex-col gap-6">
 
-    <!-- ADDRESS -->
     <div class="glass rounded-3xl p-6 md:p-7">
       <p class="text-sm uppercase tracking-[0.2em] text-slate-400">Address</p>
       <h3 class="text-xl font-semibold mt-2">Our Studio</h3>
@@ -174,7 +134,6 @@
       <p class="text-slate-400 text-sm mt-1">Mon – Sat · 9:00 AM – 9:00 PM</p>
     </div>
 
-    <!-- PHONE & EMAIL -->
     <div class="glass rounded-3xl p-6 md:p-7">
       <p class="text-sm uppercase tracking-[0.2em] text-slate-400">Get in Touch</p>
       <div class="mt-3 space-y-2 text-slate-300">
@@ -182,13 +141,12 @@
         <p class="text-slate-400">(212) 555-0192</p>
 
         <p class="font-semibold mt-3">Email</p>
-        <a href="mailto:hello@pulsedance.co" class="text-accent hover:underline">
-          hello@pulsedance.co
+        <a href="mailto:hello@unitydance.co" class="text-accent hover:underline">
+          hello@unitydance.co
         </a>
       </div>
     </div>
 
-    <!-- SOCIAL LINKS -->
     <div class="glass rounded-3xl p-6 md:p-7">
       <p class="text-sm uppercase tracking-[0.2em] text-slate-400">Follow Us</p>
       <div class="flex gap-4 mt-3 text-slate-400">
@@ -221,16 +179,16 @@
 
 </main>
 
-<!-- ================= FOOTER (UNCHANGED) ================= -->
+<!-- ================= FOOTER ================= -->
 <footer class="dance-footer">
   <div class="footer-container">
 
     <div class="footer-left">
-      <div class="footer-logo">PD</div>
-      <h3>Pulse Dance Co.</h3>
+      <div class="footer-logo">UD</div>
+      <h3>Unity Dance Company</h3>
       <p>
-        NYC-based academy elevating dancers through training,
-        performance, and community.
+        Inspiring dancers through training,
+        fitness, and creative expression.
       </p>
     </div>
 
@@ -246,25 +204,18 @@
         <a href="contact.html">Contact</a>
       </div>
 
-      <!-- <div class="footer-col">
-        <h4>Programs</h4>
-        <a href="classes.html">Dance Classes</a>
-        <a href="classes.html#crews">Crews</a>
-        <a href="classes.html#private">Private Training</a>
-      </div> -->
-
       <div class="footer-col">
         <h4>Contact</h4>
         <p>305 W 38th St, New York</p>
         <p>(212) 555-0192</p>
-        <a href="mailto:hello@pulsedance.co">hello@pulsedance.co</a>
+        <a href="mailto:hello@unitydance.co">hello@unitydance.co</a>
       </div>
 
     </div>
   </div>
 
   <div class="footer-bottom">
-    © <span id="year"></span> Pulse Dance Company. All rights reserved.
+    © <span id="year"></span> Unity Dance Company. All rights reserved.
   </div>
 </footer>
 
