--- a/index.html
+++ b/index.html
@@ -5,36 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ================= SEO ================= -->
-    <title>Pulse Dance Company | Best Dance Academy in NYC</title>
+    <title>Unity Dance Company | Best Dance Academy & Zumba Studio</title>
 
-    <meta name="description" content="Pulse Dance Company is a premier dance academy in NYC offering professional dance training, performance choreography, and creative programs. Discover our services, styles, and achievements." />
+    <meta name="description" content="Unity Dance Company offers professional dance training in Western, Bollywood, Folk, Hip Hop, Freestyle, and Contemporary styles. We also provide Zumba and fitness programs for boys and girls of all ages." />
 
-    <meta name="keywords" content="dance academy NYC, dance classes near me, hip hop dance, contemporary dance, heels class, afro dance, choreography studio, Pulse Dance Company, dance performances NYC, best dance studio NYC" />
+    <meta name="keywords" content="Unity Dance Company, dance classes near me, zumba classes, hip hop dance, bollywood dance, folk dance, contemporary dance, fitness classes, best dance studio" />
 
-    <meta name="author" content="Pulse Dance Company" />
+    <meta name="author" content="Unity Dance Company" />
 
     <!-- SOCIAL PREVIEW -->
-    <meta property="og:title" content="Pulse Dance Company – Premier Dance Academy in NYC" />
-    <meta property="og:description" content="Explore our dance programs, professional choreography, and award-winning training at Pulse Dance Company." />
+    <meta property="og:title" content="Unity Dance Company – Dance & Fitness Studio" />
+    <meta property="og:description" content="Explore dance styles and Zumba fitness programs for boys and girls at Unity Dance Company." />
     <meta property="og:type" content="website" />
 
     <link rel="stylesheet" href="css/style.css" />
- <script src="https://cdn.tailwindcss.com"></script>
-<script>
-  if (window.tailwind) {
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            accent: '#14f195',
-            'accent-2': '#6d28d9'
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      if (window.tailwind) {
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                accent: '#14f195',
+                'accent-2': '#6d28d9'
+              }
+            }
           }
-        }
+        };
       }
-    };
-  }
-</script>
-
+    </script>
   </head>
 
   <body class="bg-slate-950 text-slate-100" data-page="home">
@@ -45,7 +44,7 @@
 
     <div class="nav-left">
       <button class="menu-btn" onclick="toggleMainMenu()">☰</button>
-      <a href="index.html" class="logo-text">Pulse Dance Co.</a>
+      <a href="index.html" class="logo-text">Unity Dance Company</a>
     </div>
 
     <div class="nav-right" id="desktop-menu">
@@ -75,7 +74,7 @@
 <section class="hero-carousel">
   <div class="carousel-container">
     <div class="carousel-slide active">
-      <img src="images/dan1.jpg" alt="Dance performance stage">
+      <img src="images/dan1.jpg" alt="Dance performance stage at Unity Dance Company">
     </div>
     <div class="carousel-slide">
       <img src="images/dan2.jpg" alt="Dance rehearsal session">
@@ -96,7 +95,7 @@
     <div class="space-y-6">
       <div class="chip w-fit">
         <span class="h-2 w-2 rounded-full bg-accent animate-pulse"></span>
-        Premier Dance Company · NYC
+        Premier Dance & Fitness Studio
       </div>
 
       <h1 class="text-4xl md:text-5xl font-bold leading-tight">
@@ -104,13 +103,14 @@
       </h1>
 
       <p class="text-slate-300 max-w-xl">
-        Pulse Dance Company is a leading dance academy in New York, dedicated to shaping confident performers through world-class training, creative choreography, and unforgettable stage experiences.
+        Unity Dance Company is a professional dance and fitness studio offering a wide
+        range of dance styles and Zumba programs for boys and girls of all age groups.
       </p>
 
       <ul class="text-slate-400 text-sm space-y-2">
-        <li>✔ Professional dance training for all levels</li>
-        <li>✔ Styles: Hip-Hop, Contemporary, Heels, Afro & Dancehall</li>
-        <li>✔ 1500+ dancers trained • 30+ weekly programs</li>
+        <li>✔ Western, Bollywood, Folk, Hip Hop & Contemporary Dance</li>
+        <li>✔ Zumba & Fitness Programs for Boys and Girls</li>
+        <li>✔ Friendly environment with experienced trainers</li>
       </ul>
 
       <div class="flex flex-wrap gap-4 pt-4">
@@ -129,75 +129,80 @@
   <h2>Who We Are</h2>
 
   <p class="info-text">
-    Pulse Dance Company is a premier dance academy in NYC, dedicated to
-    training confident performers through professional instruction,
-    creative choreography, and real-world stage experience.
+    Unity Dance Company is a creative dance and fitness studio where students learn,
+    grow, and express themselves through movement. We offer multiple dance styles and
+    Zumba programs for boys and girls in a supportive and energetic environment.
   </p>
 
   <a href="about.html" class="read-more-btn">Read More</a>
   </div>
 </section>
 
+<!-- ================= SERVICES (SHORT) ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-16 md:pb-24">
   <div class="grid md:grid-cols-2 gap-10 items-center hero-gradient rounded-3xl p-8 md:p-12 glass reveal">
   <p class="section-label">Our Services</p>
   <h2>What We Offer</h2>
 
   <p class="info-text">
-    We deliver high-quality dance education and performance services
-    designed for beginners, professionals, and aspiring artists.
+    We provide professional dance training and fitness programs designed for students,
+    beginners, and performers of all levels.
   </p>
 
   <ul class="info-list">
-    <li>Professional Dance Classes</li>
-    <li>Stage Performances & Shows</li>
-    <li>Private Coaching & Audition Prep</li>
-    <li>Choreography for Events & Schools</li>
+    <li>Western, Bollywood, Folk, Hip Hop & Contemporary Dance</li>
+    <li>Freestyle Dance & Performance Training</li>
+    <li>Zumba Fitness for Boys and Girls</li>
+    <li>Aerobics, Stick, Chair & Ball Workouts</li>
   </ul>
 
   <a href="services.html" class="read-more-btn">Read More</a>
   </div>
 </section>
-<!-- ============ HOME PAGE SEO CONTENT ================= -->
-<!-- =================================================== -->
 
+<!-- ================= HOME PAGE SEO CONTENT ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-20 md:pb-24 reveal">
   <div class="glass rounded-3xl p-8 md:p-12">
 
     <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">
-      Welcome to Pulse Dance Company
+      Welcome to Unity Dance Company
     </p>
 
     <h2 class="text-3xl font-semibold mt-3">
-      A Premier Destination for Dance in NYC
+      Your Destination for Dance & Fitness
     </h2>
 
-    <!-- INTRO -->
     <p class="text-slate-300 mt-4 max-w-3xl">
-      Pulse Dance Company is more than just a dance studio — it’s a creative hub where passion, performance, and professionalism come together. Our visually stunning dance spaces, energetic classes, and inspiring instructors create the perfect environment for dancers to grow, express, and shine.
+      At Unity Dance Company, we believe dance and fitness should be accessible,
+      enjoyable, and inspiring for everyone. Our studio offers a wide variety of
+      dance styles including Western, Bollywood, Folk, Hip Hop, Freestyle, and
+      Contemporary dance. Along with dance training, we provide Zumba and fitness
+      programs for boys and girls, helping students stay active, confident, and healthy.
     </p>
 
-    <!-- HIGHLIGHTS -->
     <div class="grid md:grid-cols-3 gap-6 mt-8">
 
       <div class="glass rounded-2xl p-6 card-hover">
-        <h3 class="font-semibold mb-2">Our Services</h3>
+        <h3 class="font-semibold mb-2">Dance Styles</h3>
         <p class="text-slate-400 text-sm">
-          Professional dance classes, private coaching, choreography for events, and performance training for all skill levels.
+          Western, Bollywood, Folk, Hip Hop, Freestyle, and Contemporary dance styles
+          taught by experienced instructors.
         </p>
       </div>
 
       <div class="glass rounded-2xl p-6 card-hover">
-        <h3 class="font-semibold mb-2">Our Styles</h3>
+        <h3 class="font-semibold mb-2">Zumba & Fitness</h3>
         <p class="text-slate-400 text-sm">
-          Hip-Hop, Contemporary, Heels, Afro, Dancehall, and stage performance choreography led by industry experts.
+          Zumba Fitness, Aerobics, Stick Workouts, Chair Workouts, Ball Workouts,
+          Leg Workouts, and more — available for boys and girls.
         </p>
       </div>
 
       <div class="glass rounded-2xl p-6 card-hover">
-        <h3 class="font-semibold mb-2">Our Achievements</h3>
+        <h3 class="font-semibold mb-2">Why Choose Us</h3>
         <p class="text-slate-400 text-sm">
-          1500+ dancers trained, national stage performances, award-winning choreography, and strong community impact.
+          Friendly trainers, flexible batches, multiple styles, and a positive
+          environment that motivates every student to perform confidently.
         </p>
       </div>
 
@@ -213,11 +218,11 @@
   <div class="footer-container">
 
     <div class="footer-left">
-      <div class="footer-logo">PD</div>
-      <h3>Pulse Dance Co.</h3>
+      <div class="footer-logo">UD</div>
+      <h3>Unity Dance Company</h3>
       <p>
-        NYC-based academy elevating dancers through training,
-        performance, and community.
+        Inspiring dancers through training,
+        fitness, and creative expression.
       </p>
     </div>
 
@@ -237,14 +242,14 @@
         <h4>Contact</h4>
         <p>305 W 38th St, New York</p>
         <p>(212) 555-0192</p>
-        <a href="mailto:hello@pulsedance.co">hello@pulsedance.co</a>
+        <a href="mailto:hello@unitydance.co">hello@unitydance.co</a>
       </div>
 
     </div>
   </div>
 
   <div class="footer-bottom">
-    © <span id="year"></span> Pulse Dance Company. All rights reserved.
+    © <span id="year"></span> Unity Dance Company. All rights reserved.
   </div>
 </footer>
 
