--- a/policies.html
+++ b/policies.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ================= SEO FOR POLICIES PAGE ================= -->
-    <title>Policies | Pulse Dance Company</title>
+    <title>Policies | Unity Dance Company</title>
 
-    <meta name="description" content="Read Pulse Dance Company policies including terms and conditions, privacy policy, refund and cancellation rules, class attendance guidelines, and code of conduct." />
-    <meta name="keywords" content="dance studio policies, terms and conditions dance academy, privacy policy dance school, refund policy dance classes, code of conduct dance studio" />
-    <meta name="author" content="Pulse Dance Company" />
+    <meta name="description" content="Unity Dance Company offers a wide range of dance styles including Western, Bollywood, Folk, Hip Hop, Freestyle, and Contemporary dance. We also provide Zumba and fitness programs for both boys and girls such as Zumba Fitness, Aerobics, Stick Workouts, Chair Workouts, Ball Workouts, and Leg Workouts." />
+
+    <meta name="keywords" content="Unity Dance Company, dance studio policies, western dance classes, bollywood dance, folk dance, hip hop dance, freestyle dance, contemporary dance, zumba classes, fitness programs for boys and girls" />
+
+    <meta name="author" content="Unity Dance Company" />
 
     <!-- SOCIAL PREVIEW -->
-    <meta property="og:title" content="Policies | Pulse Dance Company" />
-    <meta property="og:description" content="Learn about our terms, privacy policy, refunds, attendance rules, and code of conduct at Pulse Dance Company." />
+    <meta property="og:title" content="Policies | Unity Dance Company" />
+    <meta property="og:description" content="Learn about Unity Dance Company policies and explore our dance styles and Zumba fitness programs for boys and girls." />
     <meta property="og:type" content="website" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -37,7 +39,7 @@
 
     <div class="nav-left">
       <button class="menu-btn"  onclick="toggleMainMenu()">☰</button>
-      <a href="index.html" class="logo-text">Pulse Dance Co.</a>
+      <a href="index.html" class="logo-text">Unity Dance Company.</a>
     </div>
 
     <div class="nav-right" id="desktop-menu">
@@ -69,7 +71,7 @@
     <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">Policies</p>
     <h1 class="text-4xl font-bold mt-4">Studio Policies & Guidelines</h1>
     <p class="text-slate-300 mt-4 max-w-3xl">
-      At Pulse Dance Company, we believe in creating a safe, respectful, and professional environment for every dancer. Please review our policies below to understand your rights and responsibilities.
+      At Unity Dance Company, we believe in creating a safe, respectful, and professional environment for every dancer. Please review our policies below to understand your rights and responsibilities.
     </p>
   </div>
 </section>
@@ -79,7 +81,7 @@
   <div class="glass rounded-3xl p-8 md:p-10">
     <h2 class="text-2xl font-semibold">Terms & Conditions</h2>
     <p class="text-slate-400 mt-3">
-      By enrolling in any class or program at Pulse Dance Company, students agree to follow studio rules, safety guidelines, and instructor directions. Enrollment confirms acceptance of schedules, fees, and studio policies.
+      By enrolling in any class or program at Unity Dance Company, students agree to follow studio rules, safety guidelines, and instructor directions. Enrollment confirms acceptance of schedules, fees, and studio policies.
     </p>
   </div>
 </section>
@@ -112,7 +114,7 @@
   <div class="glass rounded-3xl p-8 md:p-10">
     <h2 class="text-2xl font-semibold">Code of Conduct</h2>
     <p class="text-slate-400 mt-3">
-      Pulse Dance Company maintains a zero-tolerance policy for harassment, bullying, or discrimination. All dancers, parents, and staff must treat one another with respect and professionalism at all times.
+      Unity Dance Company maintains a zero-tolerance policy for harassment, bullying, or discrimination. All dancers, parents, and staff must treat one another with respect and professionalism at all times.
     </p>
 
     <ul class="mt-4 space-y-3 text-slate-400 text-sm">
@@ -132,7 +134,7 @@
 
     <div class="footer-left">
       <div class="footer-logo">PD</div>
-      <h3>Pulse Dance Co.</h3>
+      <h3>Unity Dance Company.</h3>
       <p>
         NYC-based academy elevating dancers through training,
         performance, and community.
@@ -151,13 +153,6 @@
         <a href="contact.html">Contact</a>
       </div>
 
-      <!-- <div class="footer-col">
-        <h4>Programs</h4>
-        <a href="classes.html">Dance Classes</a>
-        <a href="classes.html#crews">Crews</a>
-        <a href="classes.html#private">Private Training</a>
-      </div> -->
-
       <div class="footer-col">
         <h4>Contact</h4>
         <p>305 W 38th St, New York</p>
@@ -169,7 +164,7 @@
   </div>
 
   <div class="footer-bottom">
-    © <span id="year"></span> Pulse Dance Company. All rights reserved.
+    © <span id="year"></span> Unity Dance Company. All rights reserved.
   </div>
 </footer>
 
