--- a/services.html
+++ b/services.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
-  <title>Our Services | Pulse Dance Company</title>
-  <meta name="description" content="Explore the professional dance services offered by Pulse Dance Company including dance classes, choreography, performance training, and private coaching." />
-  <meta name="keywords" content="dance services NYC, dance classes, choreography services, private dance coaching, performance training" />
+  <title>Our Services | Unity Dance Company</title>
+  <meta name="description" content="Explore the professional dance and fitness services at Unity Dance Company including Western, Bollywood, Hip Hop, Contemporary dance and Zumba fitness programs for ladies." />
+  <meta name="keywords" content="unity dance company, dance classes, zumba classes, ladies fitness, hip hop dance, bollywood dance, contemporary dance" />
 
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/services.css" />
@@ -16,13 +16,13 @@
 
 <body class="bg-slate-950 text-slate-100" data-page="services">
 
-<!-- ========== NAVBAR (SAME AS YOUR SITE) ========== -->
+<!-- ========== NAVBAR ========== -->
 <nav class="navbar">
   <div class="nav-container">
 
     <div class="nav-left">
       <button class="menu-btn" onclick="toggleMainMenu()">☰</button>
-      <a href="index.html" class="logo-text">Pulse Dance Co.</a>
+      <a href="index.html" class="logo-text">Unity Dance Company</a>
     </div>
 
     <div class="nav-right" id="desktop-menu">
@@ -38,9 +38,9 @@
   <div id="mobile-menu" class="mobile-menu">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
+    <a href="services.html">Services</a>
     <a href="policies.html">Policies</a>
     <a href="gallery.html">Gallery</a>
-    <a href="services.html">Services</a>
     <a href="contact.html" class="mobile-btn">Enroll Now</a>
   </div>
 </nav>
@@ -50,122 +50,134 @@
 
 <!-- ========== HERO ========== -->
 <section class="services-hero">
-  <h1>Our Dance Services</h1>
+  <h1>Our Services</h1>
   <p>
-    At Pulse Dance Company, we offer a wide range of professional dance services designed
-    to inspire, train, and transform dancers at every level.
+    At Unity Dance Company, we offer a variety of dance and fitness programs designed
+    to keep you active, confident, and inspired.
   </p>
 </section>
 
-<!-- ========== SERVICES LIST ========== -->
-<section class="services-section">
+<!-- ========== DANCE STYLES ========== -->
+<section class="services-section alt-bg">
+  <h2 class="section-heading">Dance Styles We Teach</h2>
 
-  <div class="service-card">
-    <h2>Dance Classes</h2>
-    <p>
-      Structured classes for beginners to advanced dancers in Hip-Hop, Contemporary,
-      Heels, Afro, and Dancehall styles.
-    </p>
+  <div class="services-grid">
+    <div class="service-card">Western Dance</div>
+    <div class="service-card">Bollywood Dance</div>
+    <div class="service-card">Folk Dance</div>
+    <div class="service-card">Hip Hop Dance</div>
+    <div class="service-card">Freestyle Dance</div>
+    <div class="service-card">Contemporary Dance</div>
+    <div class="service-card">And many more styles...</div>
   </div>
+</section>
 
-  <div class="service-card">
-    <h2>Performance Training</h2>
-    <p>
-      Stage presence, musicality, confidence building, and showcase preparation
-      for competitions and live performances.
-    </p>
+<!-- ========== ZUMBA & FITNESS ========== -->
+<section class="services-section alt-bg">
+  <h2 class="section-heading">Zumba & Fitness Programs (For Girls & Boys)</h2>
+
+  <div class="services-grid">
+    <div class="service-card">Zumba Fitness</div>
+    <div class="service-card">Aerobics</div>
+    <div class="service-card">Stick Workouts</div>
+    <div class="service-card">Chair Workouts</div>
+    <div class="service-card">Ball Workouts</div>
+    <div class="service-card">Leg Workouts</div>
+    <div class="service-card">And more fitness styles...</div>
   </div>
+</section>
 
-  <div class="service-card">
-    <h2>Choreography Services</h2>
-    <p>
-      Custom choreography for events, weddings, school shows, corporate functions,
-      and stage productions.
-    </p>
+<!-- ========== TIMINGS ========== -->
+<section class="services-section alt-bg">
+  <h2 class="section-heading">Class Timings</h2>
+
+  <div class="timings-box">
+    <div>
+      <h3> Zumba Class Batches</h3>
+      <p>5:00 AM – 6:00 AM</p>
+      <p>6:00 AM – 7:00 AM</p>
+      <p>7:00 AM – 8:00 AM</p>
+      <p>8:00 AM – 9:00 AM</p>
+      <p>9:00 AM – 10:00 AM</p>
+    </div>
+
+    <div>
+      <h3>Dance Class Batches</h3>
+      <ul>
+        <li>3:30 PM – 4:30 PM</li>
+        <li>4:30 PM – 5:30 PM</li>
+        <li>5:30 PM – 6:30 PM</li>
+        <li>6:30 PM – 7:30 PM</li>
+        <li>7:30 PM – 8:30 PM</li>
+        <li>8:30 PM – 9:30 PM</li>
+      </ul>
+    </div>
   </div>
+</section>
 
-  <div class="service-card">
-    <h2>Private Coaching</h2>
-    <p>
-      One-on-one training sessions tailored for auditions, reels, competitions,
-      and personal skill improvement.
-    </p>
+<!-- ========== WORKING DAYS ========== -->
+<section class="services-section alt-bg">
+  <h2 class="section-heading">Working Days</h2>
+
+  <div class="days-box">
+    <div>
+      <h3>Dance Classes</h3>
+      <p>Tuesday, Wednesday, Friday, Sunday</p>
+    </div>
+
+    <div>
+      <h3>Zumba Classes</h3>
+      <p>Monday, Tuesday, Wednesday, Thursday, Friday</p>
+    </div>
   </div>
-
-  <div class="service-card">
-    <h2>Workshops & Masterclasses</h2>
-    <p>
-      Special sessions led by guest choreographers and industry professionals
-      to expand creative exposure.
-    </p>
-  </div>
-
-  <div class="service-card">
-    <h2>Kids & Youth Programs</h2>
-    <p>
-      Fun and disciplined dance training programs designed for children
-      to build confidence and coordination.
-    </p>
-  </div>
-
 </section>
 
 <!-- ========== CTA ========== -->
 <section class="services-cta">
-  <h2>Ready to Dance With Us?</h2>
-  <p>Join Pulse Dance Company and start your journey today.</p>
-  <a href="contact.html" class="btn">Get Started</a>
+  <h2>Ready to Start Your Dance Journey?</h2>
+  <p>Join Unity Dance Company today and move with confidence.</p>
+  <a href="contact.html" class="btn">Join Now</a>
 </section>
 
 </main>
 
-<!-- ========== FOOTER (SAME THEME) ========== -->
+<!-- ========== FOOTER ========== -->
 <footer class="dance-footer">
   <div class="footer-container">
 
     <div class="footer-left">
-      <div class="footer-logo">PD</div>
-      <h3>Pulse Dance Co.</h3>
+      <div class="footer-logo">UD</div>
+      <h3>Unity Dance Company</h3>
       <p>
-        NYC-based academy elevating dancers through training,
-        performance, and community.
+        Inspiring dancers through training, fitness,
+        and creative expression.
       </p>
     </div>
 
     <div class="footer-right">
-
       <div class="footer-col">
         <h4>Pages</h4>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-         <a href="services.html">Services</a>
+        <a href="services.html">Services</a>
         <a href="policies.html">Policies</a>
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
       </div>
 
-      <!-- <div class="footer-col">
-        <h4>Programs</h4>
-        <a href="classes.html">Dance Classes</a>
-        <a href="classes.html#crews">Crews</a>
-        <a href="classes.html#private">Private Training</a>
-      </div> -->
-
       <div class="footer-col">
         <h4>Contact</h4>
         <p>305 W 38th St, New York</p>
         <p>(212) 555-0192</p>
-        <a href="mailto:hello@pulsedance.co">hello@pulsedance.co</a>
+        <a href="mailto:hello@unitydance.co">hello@unitydance.co</a>
       </div>
-
     </div>
   </div>
 
   <div class="footer-bottom">
-    © <span id="year"></span> Pulse Dance Company. All rights reserved.
+    © <span id="year"></span> Unity Dance Company. All rights reserved.
   </div>
 </footer>
-
 
 <script src="js/services.js"></script>
 <script src="js/script.js"></script>
