--- a/gallery.html
+++ b/gallery.html
@@ -5,14 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- ================= SEO FOR GALLERY PAGE ================= -->
-  <title>Gallery | Pulse Dance Company</title>
-  <meta name="description" content="Explore Pulse Dance Company’s gallery featuring high-quality photos and videos of performances, rehearsals, and special events. Experience the energy and creativity of our dancers." />
-  <meta name="keywords" content="dance gallery, dance performance photos, rehearsal videos, dance events gallery, Pulse Dance Company gallery" />
-  <meta name="author" content="Pulse Dance Company" />
+  <title>Gallery | Unity Dance Company</title>
+
+  <meta name="description" content="Explore Unity Dance Company’s gallery showcasing our dance styles including Western, Bollywood, Folk, Hip Hop, Freestyle, and Contemporary dance. Discover our Zumba and fitness programs for boys and girls through vibrant performances and studio moments." />
+
+  <meta name="keywords" content="Unity Dance Company gallery, dance styles gallery, western dance, bollywood dance, folk dance, hip hop dance, freestyle dance, contemporary dance, zumba fitness, aerobics, workout classes, dance studio gallery" />
+
+  <meta name="author" content="Unity Dance Company" />
 
   <!-- SOCIAL PREVIEW -->
-  <meta property="og:title" content="Gallery | Pulse Dance Company" />
-  <meta property="og:description" content="Browse stunning visuals from our performances, rehearsals, and dance events." />
+  <meta property="og:title" content="Gallery | Unity Dance Company" />
+  <meta property="og:description" content="View dance performances, rehearsals, and Zumba fitness sessions at Unity Dance Company for boys and girls." />
   <meta property="og:type" content="website" />
 
   <link rel="stylesheet" href="css/style.css" />
@@ -36,7 +39,7 @@
 
     <div class="nav-left">
       <button class="menu-btn"  onclick="toggleMainMenu()">☰</button>
-      <a href="index.html" class="logo-text">Pulse Dance Co.</a>
+      <a href="index.html" class="logo-text">Unity Dance Company.</a>
     </div>
 
     <div class="nav-right" id="desktop-menu">
@@ -68,7 +71,10 @@
     <p class="section-title text-sm uppercase tracking-[0.2em] text-slate-400">Gallery</p>
     <h1 class="text-4xl font-bold mt-4">Moments in Motion</h1>
     <p class="text-slate-300 mt-4 max-w-3xl">
-      Discover the energy of Pulse Dance Company through our curated collection of performances, rehearsals, and special events. Each frame captures the passion, dedication, and creativity of our dancers.
+      Discover the energy of Unity Dance Company through our curated collection of performances,
+      rehearsals, and fitness sessions. Each moment reflects our passion for dance styles such as
+      Western, Bollywood, Folk, Hip Hop, Freestyle, and Contemporary dance — along with our lively
+      Zumba and fitness programs for boys and girls.
     </p>
   </div>
 </section>
@@ -80,22 +86,22 @@
 
   <!-- ROW 1 -->
   <div class="gallery-row">
-    <img src="images/dan1.jpg" alt="Dance performance on stage" onclick="openLightbox(this)">
-    <img src="images/dan2.jpg" alt="Group dance rehearsal" onclick="openLightbox(this)">
+    <img src="images/dan1.jpg" alt="Western dance performance" onclick="openLightbox(this)">
+    <img src="images/dan2.jpg" alt="Bollywood dance rehearsal" onclick="openLightbox(this)">
     <img src="images/dan3.jpg" alt="Hip hop dance show" onclick="openLightbox(this)">
   </div>
 
   <!-- ROW 2 -->
   <div class="gallery-row">
     <img src="images/dan4.jpg" alt="Contemporary dance performance" onclick="openLightbox(this)">
-    <img src="images/dan5.jpg" alt="Afro dance routine" onclick="openLightbox(this)">
-    <img src="images/dan6.jpg" alt="Heels choreography" onclick="openLightbox(this)">
+    <img src="images/dan5.jpg" alt="Freestyle dance routine" onclick="openLightbox(this)">
+    <img src="images/dan6.jpg" alt="Folk dance choreography" onclick="openLightbox(this)">
   </div>
 
   <!-- ROW 3 -->
   <div class="gallery-row">
-    <img src="images/dan7.jpg" alt="Dance competition moment" onclick="openLightbox(this)">
-    <img src="images/dan8.jpg" alt="Stage rehearsal session" onclick="openLightbox(this)">
+    <img src="images/dan7.jpg" alt="Zumba fitness session" onclick="openLightbox(this)">
+    <img src="images/dan8.jpg" alt="Aerobics workout class" onclick="openLightbox(this)">
     <img src="images/dan9.jpg" alt="Dance event celebration" onclick="openLightbox(this)">
     <img src="images/dan10.jpg" alt="Finale group performance" onclick="openLightbox(this)">
   </div>
@@ -108,7 +114,6 @@
   <img id="lightbox-img" src="" alt="">
   <p id="lightbox-caption"></p>
 </div>
-
 
 <!-- ================= VIDEO GALLERY ================= -->
 <section class="max-w-6xl mx-auto px-4 pb-20 md:pb-24 reveal">
@@ -133,7 +138,7 @@
         frameborder="0"
         allowfullscreen>
       </iframe>
-      <p class="p-4 text-slate-300 text-sm">Behind the scenes – Rehearsal vibes</p>
+      <p class="p-4 text-slate-300 text-sm">Behind the scenes – Studio rehearsals</p>
     </div>
 
   </div>
@@ -146,11 +151,11 @@
   <div class="footer-container">
 
     <div class="footer-left">
-      <div class="footer-logo">PD</div>
-      <h3>Pulse Dance Co.</h3>
+      <div class="footer-logo">UD</div>
+      <h3>Unity Dance Company.</h3>
       <p>
-        NYC-based academy elevating dancers through training,
-        performance, and community.
+        Inspiring dancers through training,
+        fitness, and creative expression.
       </p>
     </div>
 
@@ -166,25 +171,18 @@
         <a href="contact.html">Contact</a>
       </div>
 
-      <!-- <div class="footer-col">
-        <h4>Programs</h4>
-        <a href="classes.html">Dance Classes</a>
-        <a href="classes.html#crews">Crews</a>
-        <a href="classes.html#private">Private Training</a>
-      </div> -->
-
       <div class="footer-col">
         <h4>Contact</h4>
         <p>305 W 38th St, New York</p>
         <p>(212) 555-0192</p>
-        <a href="mailto:hello@pulsedance.co">hello@pulsedance.co</a>
+        <a href="mailto:hello@unitydance.co">hello@unitydance.co</a>
       </div>
 
     </div>
   </div>
 
   <div class="footer-bottom">
-    © <span id="year"></span> Pulse Dance Company. All rights reserved.
+    © <span id="year"></span> Unity Dance Company. All rights reserved.
   </div>
 </footer>
 
