--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="flex flex-wrap gap-4 pt-4">
         <a href="contact.html" class="btn">Enroll Now</a>
         <a href="gallery.html" class="btn btn-outline">View Gallery</a>
-        <a href="contact.html" class="btn btn-outline">Contact Us</a>
+        <a href="about.html" class="btn btn-outline">About Us</a>
       </div>
     </div>
   </div>
