--- a/services.html
+++ b/services.html
@@ -6,8 +6,8 @@
 
   <!-- SEO -->
   <title>Our Services | Unity Dance Company</title>
-  <meta name="description" content="Explore the professional dance and fitness services at Unity Dance Company including Western, Bollywood, Hip Hop, Contemporary dance and Zumba fitness programs for ladies." />
-  <meta name="keywords" content="unity dance company, dance classes, zumba classes, ladies fitness, hip hop dance, bollywood dance, contemporary dance" />
+  <meta name="description" content="Unity Dance Company offers professional dance classes and Zumba fitness programs for boys and girls. Learn Western, Bollywood, Hip Hop, Contemporary dance and stay fit with our energetic workout sessions." />
+  <meta name="keywords" content="unity dance company, dance classes, zumba fitness, hip hop dance, bollywood dance, contemporary dance, fitness studio" />
 
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/services.css" />
@@ -16,10 +16,9 @@
 
 <body class="bg-slate-950 text-slate-100" data-page="services">
 
-<!-- ========== NAVBAR ========== -->
+<!-- NAVBAR -->
 <nav class="navbar">
   <div class="nav-container">
-
     <div class="nav-left">
       <button class="menu-btn" onclick="toggleMainMenu()">☰</button>
       <a href="index.html" class="logo-text">Unity Dance Company</a>
@@ -45,116 +44,201 @@
   </div>
 </nav>
 
-<!-- ========== MAIN ========== -->
 <main class="pt-28 md:pt-32">
 
-<!-- ========== HERO ========== -->
+<!-- HERO -->
 <section class="services-hero">
   <h1>Our Services</h1>
   <p>
-    At Unity Dance Company, we offer a variety of dance and fitness programs designed
-    to keep you active, confident, and inspired.
+    Unity Dance Company offers professional dance and fitness programs that help
+    students build confidence, creativity, and a healthy lifestyle.
   </p>
 </section>
 
-<!-- ========== DANCE STYLES ========== -->
-<section class="services-section alt-bg">
-  <h2 class="section-heading">Dance Styles We Teach</h2>
+<!-- ================= DANCE STYLES ================= -->
+<section class="services-section">
+<div class="grid md:grid-cols-2 gap-10 items-center hero-gradient rounded-3xl p-8 md:p-12 glass reveal">
+  <h2 class="section-heading">💃 Dance Styles We Teach</h2>
 
   <div class="services-grid">
-    <div class="service-card">Western Dance</div>
-    <div class="service-card">Bollywood Dance</div>
-    <div class="service-card">Folk Dance</div>
-    <div class="service-card">Hip Hop Dance</div>
-    <div class="service-card">Freestyle Dance</div>
-    <div class="service-card">Contemporary Dance</div>
-    <div class="service-card">And many more styles...</div>
+
+    <div class="service-card" >
+      <h3>Western Dance</h3>
+      <p>Energetic and expressive dance style focusing on rhythm, posture, and modern movements.</p>
+      <p>Perfect for stage shows, competitions, and boosting confidence.</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Bollywood Dance</h3>
+      <p>A vibrant mix of Indian and western moves inspired by film choreography.</p>
+      <p>Great for celebrations, performances, and cultural events.</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Folk Dance</h3>
+      <p>Traditional dance styles that celebrate culture and heritage.</p>
+      <p>Helps students learn discipline, teamwork, and cultural pride.</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Hip Hop Dance</h3>
+      <p>High-energy urban dance focusing on freestyle and groove techniques.</p>
+      <p>Builds confidence, stamina, and stage presence.</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Freestyle Dance</h3>
+      <p>Encourages dancers to express creativity with their own movements.</p>
+      <p>Improves rhythm sense and individual performance style.</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Contemporary Dance</h3>
+      <p>Elegant and emotional dance style blending ballet and modern techniques.</p>
+      <p>Perfect for storytelling and expressive performances.</p>
+    </div>
+</div>
   </div>
 </section>
 
-<!-- ========== ZUMBA & FITNESS ========== -->
+<!-- ================= ZUMBA & FITNESS ================= -->
 <section class="services-section alt-bg">
-  <h2 class="section-heading">Zumba & Fitness Programs (For Girls & Boys)</h2>
+  <div class="grid md:grid-cols-2 gap-10 items-center hero-gradient rounded-3xl p-8 md:p-12 glass reveal">
+  <h2 class="section-heading">🔥 Zumba & Fitness Programs (For Boys & Girls)</h2>
 
   <div class="services-grid">
-    <div class="service-card">Zumba Fitness</div>
-    <div class="service-card">Aerobics</div>
-    <div class="service-card">Stick Workouts</div>
-    <div class="service-card">Chair Workouts</div>
-    <div class="service-card">Ball Workouts</div>
-    <div class="service-card">Leg Workouts</div>
-    <div class="service-card">And more fitness styles...</div>
+
+    <div class="service-card">
+      <h3>Zumba Fitness</h3>
+      <p>Fun dance-based workout that burns calories and improves stamina.</p>
+      <p>Perfect for staying fit while enjoying music and movement.</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Aerobics</h3>
+      <p>High-energy workout sessions to improve heart health.</p>
+      <p>Boosts flexibility, endurance, and overall fitness.</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Stick Workouts</h3>
+      <p>Interactive fitness sessions using sticks for coordination.</p>
+      <p>Improves focus, strength, and reflexes.</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Chair Workouts</h3>
+      <p>Low-impact exercises suitable for beginners and seniors.</p>
+      <p>Helps improve mobility and joint strength safely.</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Ball Workouts</h3>
+      <p>Fun workouts using fitness balls for balance training.</p>
+      <p>Strengthens core muscles and improves posture.</p>
+    </div>
+
+    <div class="service-card">
+      <h3>Leg Workouts</h3>
+      <p>Focused exercises to tone and strengthen leg muscles.</p>
+      <p>Enhances stamina and flexibility for dancers and athletes.</p>
+    </div>
+</div>
   </div>
 </section>
 
-<!-- ========== TIMINGS ========== -->
-<section class="services-section alt-bg">
-  <h2 class="section-heading">Class Timings</h2>
+<!-- ================= TIMINGS ================= -->
+<!-- ================= TIMINGS ================= -->
+<section class="services-section timings-section">
+  <div class="timings-wrapper glass reveal">
 
-  <div class="timings-box">
-    <div>
-      <h3> Zumba Class Batches</h3>
-      <p>5:00 AM – 6:00 AM</p>
-      <p>6:00 AM – 7:00 AM</p>
-      <p>7:00 AM – 8:00 AM</p>
-      <p>8:00 AM – 9:00 AM</p>
-      <p>9:00 AM – 10:00 AM</p>
-    </div>
+    <h2 class="fancy-heading">⏰ Class Timings</h2>
 
-    <div>
-      <h3>Dance Class Batches</h3>
-      <ul>
-        <li>3:30 PM – 4:30 PM</li>
-        <li>4:30 PM – 5:30 PM</li>
-        <li>5:30 PM – 6:30 PM</li>
-        <li>6:30 PM – 7:30 PM</li>
-        <li>7:30 PM – 8:30 PM</li>
-        <li>8:30 PM – 9:30 PM</li>
-      </ul>
-    </div>
-  </div>
-</section>
+    <div class="timings-grid">
 
-<!-- ========== WORKING DAYS ========== -->
-<section class="services-section alt-bg">
-  <h2 class="section-heading">Working Days</h2>
+      <!-- ZUMBA -->
+      <div class="time-card fancy-card">
+        <div class="card-header">
+          💃 Zumba Batches
+        </div>
+        <ul class="time-list">
+          <li>5:00 AM – 6:00 AM</li>
+          <li>6:00 AM – 7:00 AM</li>
+          <li>7:00 AM – 8:00 AM</li>
+          <li>8:00 AM – 9:00 AM</li>
+          <li>9:00 AM – 10:00 AM</li>
+        </ul>
+      </div>
 
-  <div class="days-box">
-    <div>
-      <h3>Dance Classes</h3>
-      <p>Tuesday, Wednesday, Friday, Sunday</p>
-    </div>
+      <!-- DANCE -->
+      <div class="time-card fancy-card">
+        <div class="card-header">
+          🕺 Dance Batches
+        </div>
+        <ul class="time-list">
+          <li>3:30 PM – 4:30 PM</li>
+          <li>4:30 PM – 5:30 PM</li>
+          <li>5:30 PM – 6:30 PM</li>
+          <li>6:30 PM – 7:30 PM</li>
+          <li>7:30 PM – 8:30 PM</li>
+          <li>8:30 PM – 9:30 PM</li>
+        </ul>
+      </div>
 
-    <div>
-      <h3>Zumba Classes</h3>
-      <p>Monday, Tuesday, Wednesday, Thursday, Friday</p>
     </div>
   </div>
 </section>
 
-<!-- ========== CTA ========== -->
+<!-- ================= WORKING DAYS ================= -->
+<section class="services-section days-section">
+  <div class="days-wrapper glass reveal">
+
+    <h2 class="fancy-heading">📅 Working Days</h2>
+
+    <div class="days-grid">
+
+      <div class="day-card fancy-card">
+        <div class="card-header">🎵 Dance Classes</div>
+        <p class="highlight-text">
+          Tuesday • Wednesday • Friday • Sunday
+        </p>
+      </div>
+
+      <div class="day-card fancy-card">
+        <div class="card-header">🔥 Zumba Classes</div>
+        <p class="highlight-text">
+          Monday • Tuesday • Wednesday • Thursday • Friday
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+<!-- CTA -->
 <section class="services-cta">
   <h2>Ready to Start Your Dance Journey?</h2>
-  <p>Join Unity Dance Company today and move with confidence.</p>
+  <p>Join Unity Dance Company and move with confidence.</p>
   <a href="contact.html" class="btn">Join Now</a>
 </section>
 
 </main>
 
-<!-- ========== FOOTER ========== -->
 <footer class="dance-footer">
   <div class="footer-container">
 
     <div class="footer-left">
       <div class="footer-logo">UD</div>
-      <h3>Unity Dance Company</h3>
+      <h3>Unity Dance Company.</h3>
       <p>
-        Inspiring dancers through training, fitness,
-        and creative expression.
+        Inspiring dancers through training,
+        fitness, and creative expression.
       </p>
     </div>
 
     <div class="footer-right">
+
       <div class="footer-col">
         <h4>Pages</h4>
         <a href="index.html">Home</a>
@@ -171,6 +255,7 @@
         <p>(212) 555-0192</p>
         <a href="mailto:hello@unitydance.co">hello@unitydance.co</a>
       </div>
+
     </div>
   </div>
 
@@ -179,7 +264,13 @@
   </div>
 </footer>
 
+<script src="js/script.js"></script>
+</body>
+</html>
+
+
 <script src="js/services.js"></script>
 <script src="js/script.js"></script>
+
 </body>
 </html>
